
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ttt)

SET( CMAKE_BUILD_TYPE RELEASE )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -std=c++14 -fopenmp" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pedantic -DGLIBCXX_DEBUG" )
#SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )


#SET( CUDA_NVCC_FLAGS "-gencode=arch=compute_35,code=compute_35" )

#SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

#FIND_PACKAGE(CUDA)
#INCLUDE(FindCUDA)

#CUDA_ADD_EXECUTABLE(bin_ttt tabletennis.cu tabletenniskernel.cu)
ADD_EXECUTABLE(bin_ttt tabletennis_easy_opt.cpp  )

